--- a/tasks/databases.yml
+++ b/tasks/databases.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: ensure mariadb databases are present.
-  mysql_db:
+  community.mysql.mysql_db:
     name: "{{ item.name }}"
     collation: "{{ item.collation | default('utf8_general_ci') }}"
     encoding: "{{ item.encoding | default('utf8') }}"
