--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,16 +1,16 @@
 ---
 
 - name: systemctl daemon-reload
-  systemd:
+  ansible.builtin.systemd:
     daemon_reload: true
 
 - name: restart mariadb
-  service:
+  ansible.builtin.service:
     name: '{{ mariadb_service }}'
     state: restarted
   notify:
     - wait 2 seconds for clean startup
 
 - name: wait 2 seconds for clean startup
-  pause:
+  ansible.builtin.pause:
     seconds: 2
