--- a/tasks/secure-installation.yml
+++ b/tasks/secure-installation.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: check if a custom root password is specified
-  debug:
+  ansible.builtin.debug:
     msg: >
       Warning!!
       The MariaDB root password was left empty.
