--- a/tasks/service.yml
+++ b/tasks/service.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: ensure mariadb is enabled on boot
-  service:
+  ansible.builtin.service:
     name: '{{ mariadb_service }}'
     enabled: true
 
