fix dependecies to ansible-core < 2.13
remove redhat based distributions from test-matrix

--- a/molecule/with-tls/prepare.yml
+++ b/molecule/with-tls/prepare.yml
@@ -1,5 +1,13 @@
 ---
 
+- name: d
+  hosts: localhost
+  pre_tasks:
+    - debug:
+        msg:
+          - "ansible version      : {{ ansible_version }}"
+
+
 - name: prepare container
   hosts: all
   gather_facts: true
