--- a/tasks/repositories.yml
+++ b/tasks/repositories.yml
@@ -29,7 +29,7 @@
             owner: root
             group: root
 
-        - name: clean apt cache
+        - name: clean apt cache   # noqa command-instead-of-module
           ansible.builtin.command: |
             apt-get clean
           when: "ansible_version.full is version_compare('2.13', '<')"
