--- a/.github/workflows/primary-replica.yml
+++ b/.github/workflows/primary-replica.yml
@@ -31,6 +31,8 @@ jobs:
           - archlinux:latest
         ansible-version:
           - '6.7'
+        scenario:
+          - with-replication
 
     steps:
       - name: check out the codebase.
@@ -49,17 +51,20 @@ jobs:
           pip install -r test-requirements.txt
 
       # See: https://github.com/geerlingguy/ansible-role-mysql/issues/422
-      - name: Disable AppArmor
-        run: |
-            set -x
-            sudo apt-get install apparmor-profiles
-            sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
-            sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
+      # - name: Disable AppArmor
+      #   run: |
+      #       set -x
+      #       sudo apt-get install apparmor-profiles
+      #       sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
+      #       sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
 
       - name: test with tox
         run: |
-          tox -e ansible_$(printf "${{ matrix.ansible-version }}") \
-            -- molecule test --scenario-name with-replication
+          make \
+            test \
+            -e TOX_SCENARIO="${{ matrix.scenario }}" \
+            -e TOX_ANSIBLE="ansible_${{ matrix.ansible-version }}" \
+            -e DISTRIBUTION="${{ matrix.image }}"
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
@@ -76,6 +81,8 @@ jobs:
           - debian:11
         ansible-version:
           - '6.7'
+        scenario:
+          - with-replication
 
     steps:
       - name: check out the codebase.
@@ -94,17 +101,20 @@ jobs:
           pip install -r test-requirements.txt
 
       # See: https://github.com/geerlingguy/ansible-role-mysql/issues/422
-      - name: Disable AppArmor
-        run: |
-            set -x
-            sudo apt-get install apparmor-profiles
-            sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
-            sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
+      # - name: Disable AppArmor
+      #   run: |
+      #       set -x
+      #       sudo apt-get install apparmor-profiles
+      #       sudo ln -s /etc/apparmor.d/usr.sbin.mysqld /etc/apparmor.d/disable/
+      #       sudo apparmor_parser -R /etc/apparmor.d/usr.sbin.mysqld
 
       - name: test with tox
         run: |
-          tox -e ansible_$(printf "${{ matrix.ansible-version }}") \
-            -- molecule test --scenario-name with-replication
+          make \
+            test \
+            -e TOX_SCENARIO="${{ matrix.scenario }}" \
+            -e TOX_ANSIBLE="ansible_${{ matrix.ansible-version }}" \
+            -e DISTRIBUTION="${{ matrix.image }}"
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
