--- a/molecule/with-replication/converge.yml
+++ b/molecule/with-replication/converge.yml
@@ -1,10 +1,9 @@
 ---
+
 - name: converge
   hosts: all
   any_errors_fatal: false
-
-  environment:
-    NETRC: ''
+  become: false
 
   roles:
     - role: ansible-mariadb
