--- a/tasks/detect_mariadb_version.yml
+++ b/tasks/detect_mariadb_version.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: detect available mariadb version
-  package_version:
+  bodsch.core.package_version:
     state: available
     package_name: "{{ mariadb_server }}"
     repository: "{{ 'MariaDB' if ansible_os_family | lower == 'redhat' and mariadb_use_external_repo else '' }}"
