--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -24,6 +24,10 @@
           when:
             - ansible_os_family | lower == 'artix linux'
 
+    - name: update package cache
+      ansible.builtin.package:
+        update_cache: true
+
     - name: environment
       ansible.builtin.debug:
         msg:
