--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 
-mariadb_use_external_repo: true
+mariadb_use_external_repo: false
 mariadb_version: 10.6
 
 mariadb_debian_repo: https://mirror.netcologne.de/mariadb/repo
