--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -32,29 +32,50 @@
   when:
     - ansible_os_family | lower != 'archlinux'
 
+- name: create custom fact file
+  bodsch.core.facts:
+    name: mariadb
+    facts:
+      version: "{{ mariadb_version }}"
+      short_version: "{{ mariadb_short_version }}"
+      full_version: "{{ package_version.available.full_version }}"
+      platform_version: "{{ package_version.available.platform_version }}"
+
 - name: python support
   when:
     - mariadb_python_packages is defined
     - mariadb_python_packages | length > 0
   block:
-    - name: create requirements.txt
-      ansible.builtin.template:
-        src: requirements.txt.j2
-        dest: /tmp/mariadb-requirements.txt
-        mode: 0660
+    - name: create pip requirements file
+      bodsch.core.pip_requirements:
+        name: mariadb
+        requirements: "{{ mariadb_python_packages }}"
+      register: pip_requirements
 
-    - name: ensure python bindings for mariadb packages 1st
+    - name: fail if pip not installed
+      ansible.builtin.fail:
+        msg: python pip is not installed
+      when:
+        - not pip_requirements.pip.present
+
+    - name: install python packages  # noqa no-handler
       ansible.builtin.pip:
-        requirements: /tmp/mariadb-requirements.txt
         state: present
-        executable: pip{{ '3' if ansible_python.version.major | int == 3 else '' }}
+        requirements: "{{ pip_requirements.requirements_file }}"
+        extra_args: "{{ mariadb_python_extra_args | default([]) | bodsch.core.python_extra_args(python_version=ansible_python.version) | default(omit) }}"
       register: pip_install
       ignore_errors: true
       no_log: true
-
-    - name: use build tools
       when:
+        - pip_requirements.requirements_file is defined
+        - pip_requirements.changed
+
+    - name: first run is failed, try with build
+      when:
+        - pip_install is defined
+        - pip_install.failed is defined
         - pip_install.failed
+        - mariadb_build_packages | default([]) | count > 0
       block:
         - name: install build essentials
           ansible.builtin.package:
@@ -63,14 +84,29 @@
 
         - name: ensure python bindings for mariadb packages 2nd
           ansible.builtin.pip:
-            requirements: /tmp/mariadb-requirements.txt
             state: present
-            executable: pip{{ '3' if ansible_python.version.major | int == 3 else '' }}
+            requirements: "{{ pip_requirements.requirements_file }}"
+            extra_args: "{{ mariadb_python_extra_args | default([]) | bodsch.core.python_extra_args(python_version=ansible_python.version) | default(omit) }}"
+          register: pip_install
+          ignore_errors: false
 
         - name: uninstall build essentials
           ansible.builtin.package:
             name: "{{ mariadb_build_packages }}"
             state: absent
+
+  rescue:
+    - name: remove pip requirements
+      bodsch.core.pip_requirements:
+        name: mariadb
+        requirements: "{{ mariadb_python_packages }}"
+        state: absent
+
+    - name: pip requirements installation failed
+      ansible.builtin.fail:
+        msg: "{{ pip_install.msg }}"
+      when:
+        - pip_install.failed
 
 - name: install mysqltuner
   ansible.builtin.get_url:
