--- a/vars/main.yml
+++ b/vars/main.yml
@@ -29,7 +29,7 @@ mariadb_config_defaults_mysqld:
   ## * Basic Settings
   ##
   user: mysql
-  pid_file: /run/mysqld/mysqld.pid
+  pid_file: /run/mysqld/mariadb.pid
   socket: "{{ mariadb_socket }}"
   # port: 3306
   # basedir: /usr
