--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -25,6 +25,24 @@
   when:
     - ansible_os_family | lower == 'debian'
 
+- name: tune systemd
+  when:
+    - ansible_service_mgr == 'systemd'
+  block:
+    - name: ensure mariadb.service.d is present
+      ansible.builtin.file:
+        dest: /etc/systemd/system/mariadb.service.d
+        state: directory
+        mode: 0750
+
+    - name: create overwrite.conf for systemd
+      ansible.builtin.template:
+        src: init/systemd/overwrite.conf.j2
+        dest: "/etc/systemd/system/mariadb.service.d/overwrite.conf"
+        mode: 0444
+      notify:
+        - systemctl daemon-reload
+
 - name: remove policy-rc.d
   ansible.builtin.file:
     path: /usr/sbin/policy-rc.d
