--- a/tasks/installation.yml
+++ b/tasks/installation.yml
@@ -17,6 +17,16 @@
     state: present
   register: mariadb_install_packages
 
+- name: create directory for pid file '{{ mariadb_config_mysqld.pid_file | dirname }}'
+  ansible.builtin.file:
+    path: "{{ mariadb_config_mysqld.pid_file | dirname }}"
+    state: directory
+    owner: mysql
+    mode: 0755
+  when:
+    - mariadb_config_mysqld.pid_file is defined
+    - mariadb_config_mysqld.pid_file | string | length > 0
+
 - name: fix debian specific debian-start file
   ansible.builtin.template:
     src: etc/mysql/debian-start.j2
@@ -24,24 +34,6 @@
     mode: 0755
   when:
     - ansible_os_family | lower == 'debian'
-
-- name: tune systemd
-  when:
-    - ansible_service_mgr == 'systemd'
-  block:
-    - name: ensure mariadb.service.d is present
-      ansible.builtin.file:
-        dest: /etc/systemd/system/mariadb.service.d
-        state: directory
-        mode: 0750
-
-    - name: create overwrite.conf for systemd
-      ansible.builtin.template:
-        src: init/systemd/overwrite.conf.j2
-        dest: "/etc/systemd/system/mariadb.service.d/overwrite.conf"
-        mode: 0444
-      notify:
-        - systemctl daemon-reload
 
 - name: remove policy-rc.d
   ansible.builtin.file:
