--- a/tasks/configure.yml
+++ b/tasks/configure.yml
@@ -199,22 +199,6 @@
       ansible.builtin.debug:
         msg: "{{ service_status }}"
 
-    - name: wait 2 seconds
-      ansible.builtin.pause:
-        seconds: 2
-
-    - name: get journal log
-      bodsch.core.journalctl:
-        unit: "{{ mariadb_service }}"
-        lines: 250
-      register: mariadb_journal
-
-    - name: journalctl output
-      ansible.builtin.debug:
-        msg: "{{ mariadb_journal.stdout }}"
-      when:
-        - mariadb_journal.stdout is defined
-
     - name: detect error log
       ansible.builtin.stat:
         path: "{{ mariadb_config_mysqld.log_error }}"
@@ -238,8 +222,24 @@
       ansible.builtin.shell:
         cmd: |
           ls -lth /run/
-          ls -lth /run/mysqld/*
+          ls -lth /run/mysqld
         chdir: /run
+
+    - name: wait 2 seconds
+      ansible.builtin.pause:
+        seconds: 2
+
+    - name: get journal log
+      bodsch.core.journalctl:
+        unit: "{{ mariadb_service }}"
+        lines: 250
+      register: mariadb_journal
+
+    - name: journalctl output
+      ansible.builtin.debug:
+        msg: "{{ mariadb_journal.stdout }}"
+      when:
+        - mariadb_journal.stdout is defined
 
 - name: flush handlers
   ansible.builtin.meta: flush_handlers
